src/Components/Nav2/Nav2.module.css
/* NAV2 */

.nav2 {
	display: flex;
	align-items: center;
	justify-content: space-between;
	height: 80px;
	padding: 0 24px;
	background-color: var(--blueGray200);
}

.nav2__logoContainer {
	display: flex;
	align-items: center;
	gap: 12px;
}

.nav2__logoContainer__logo {
	font-size: var(--fontSize6);
	font-weight: var(--black);
}

.nav2__logoContainer__link {
	font-size: var(--fontSize5);
	color: var(--blueGray700);
}

.nav2__menu {
	display: flex;
	align-items: center;
	gap: 12px;
}

.side {
	align-items: flex-start;
	flex-direction: column;
	padding: 96px 24px 24px 32px;
	background-color: var(--blueGray100);
	width: 280px;
	height: 100vh;
	position: fixed;
	top: 0;
	right: 0;
}

.nav2__menu__item {
	text-decoration: none;
	font-size: var(--fontSize6);
	color: var(--blueGray900);
}

.nav2__menuBtn {
	display: none;
}

@media screen and (max-width: 1024px) {
	.nav2__menuBtn {
		display: grid;
		place-items: center;
		width: 40px;
		height: 40px;
		color: var(--blueGray900);
		font-size: var(--fontSize5);
		border: none;
		cursor: pointer;
		z-index: 1;
	}
}

